// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeFormGroupOptions should normalize complex form group options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controlList": [],
  "controllerName": "user-form",
  "directory": null,
  "feature": null,
  "formName": "user-form",
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "default",
  "legend": "Address",
  "memberList": [],
  "name": "address",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "group",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "default-form-group.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "validatorList": [],
}
`;

exports[`NormalizeFormGroupOptions should normalize minimal form group options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controlList": [],
  "controllerName": "test-form",
  "directory": null,
  "feature": null,
  "formName": "test-form",
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "default",
  "legend": null,
  "memberList": [],
  "name": "testGroup",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "group",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "default-form-group.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "validatorList": [],
}
`;
